<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWordActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Word"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etAddWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="15dp">

        <TextView
            android:text="Part of Speech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etAddPartOfSpeech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="15dp">
        <TextView
            android:id="@+id/tvAddLevel"
            android:text="@string/text_Level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="3"
            android:layout_marginBottom="15dp"            >

            <RadioButton
                android:id="@+id/radButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onLevelSelected"
                android:layout_weight="1"
                android:text="@string/text_Easy"
                android:background="@color/materialYellow"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onLevelSelected"
                android:layout_weight="1"
                android:text="@string/text_Mid"
                android:background="@color/materialOrange"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/materialRed"
                android:onClick="onLevelSelected"
                android:text="@string/text_Difficult"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"/>
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="15dp">
        <TextView
            android:text="Definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etAddDefinition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="6"
            android:singleLine="false"
            android:textSize="20sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btAdd"
        android:text="@string/text_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAddWordClick"
        android:textSize="20sp"/>

</LinearLayout>